# global-mapping

./: .gitignore  .pdm-python  add_translation_id.py  convert.py  main.py  package-lock.json  package.json  pyproject.toml  temp.json  test.json  test.py  test.txt  test_ozz.json  test_ozzy.txt  translations.json  tsconfig.json
.github/workflows/: main.yml
generated_ts/: battlebit.ts  bf2.ts  bf2142.ts  bf3.ts  bf5.ts  bf6.ts  bfbc2.ts  bfh.ts
global_mapping/: battlelog.py  bf1.py  bf2042.py  bf3.py  bf5.py  bf6.py  bfh.py  constants.py  constants_stats.py  merger.py
global_mapping/readability/: bf1.py  bf6.py
global_mapping/readability/bf2042/: main.py
global_mapping/readability/bf2042/languages/settingValues/: ar_sa.py  de_de.py  en_us.py  es_es.py  es_mx.py  fr_fr.py  it_it.py  ja_jp.py  ko_kr.py  main.py  pl_pl.py  pt_br.py  ru_ru.py  zh_cn.py  zh_tw.py
global_mapping/readability/bf6/: main.py
global_mapping/readability/bf6/languages/settingValues/: ar_sa.py  de_de.py  en_gb.py  en_us.py  es_es.py  es_mx.py  fr_fr.py  it_it.py  ja_jp.py  ko_kr.py  main.py  pl_pl.py  pt_br.py  zh_cn.py  zh_tw.py
src/: index.ts
src/generated_ts/: battlelog.ts  bf1.ts  bf1942.ts  bf2042.ts  bf4.ts  bf6.ts  bfvietnam.ts  marne.ts  other.ts
tests/bf2042/: checks.py  filters.py  main.py  test.txt  unmapped.py  used.py
tests/bf6/: main.py  used_methods.py
tools/: generate_translation.py
