[tool.poetry]
name = "global-mapping"
version = "0.1.16"
description = "A repo that contains all mapping required by GameTools"
authors = ["p0lygun <solankivibhakar82@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "global_mapping"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
